# bbb

./: Cargo.toml  Trunk.toml  index.html  index.scss  rust-toolchain.toml  theme.scss
.cargo/: config.toml
.github/workflows/: deploy.yml
analysis/: Cargo.toml
analysis/examples/: pan_ukbb.rs  pan_ukbb_pvalues.rs
analysis/examples/shared/: mod.rs  summary_stats.rs
analysis/src/: lib.rs  pvalues.rs  scores.rs  util.rs
data/pan_ukbb/pvalues/: biomarkers-30600-both_sexes-irnt.json.br  biomarkers-30610-both_sexes-irnt.json.br  biomarkers-30620-both_sexes-irnt.json.br  biomarkers-30630-both_sexes-irnt.json.br  biomarkers-30640-both_sexes-irnt.json.br  biomarkers-30670-both_sexes-irnt.json.br  biomarkers-30680-both_sexes-irnt.json.br  biomarkers-30690-both_sexes-irnt.json.br  biomarkers-30700-both_sexes-irnt.json.br  biomarkers-30710-both_sexes-irnt.json.br  biomarkers-30720-both_sexes-irnt.json.br  biomarkers-30730-both_sexes-irnt.json.br  biomarkers-30750-both_sexes-irnt.json.br  biomarkers-30760-both_sexes-irnt.json.br  biomarkers-30770-both_sexes-irnt.json.br  biomarkers-30780-both_sexes-irnt.json.br  biomarkers-30810-both_sexes-irnt.json.br  biomarkers-30830-both_sexes-irnt.json.br  biomarkers-30860-both_sexes-irnt.json.br  biomarkers-30870-both_sexes-irnt.json.br  biomarkers-30890-both_sexes-irnt.json.br  categorical-120-both_sexes-1.json.br  categorical-120-both_sexes-9.json.br  categorical-1210-both_sexes-1210.json.br  categorical-1418-both_sexes-1.json.br  categorical-1428-both_sexes-0.json.br  categorical-1428-both_sexes-1.json.br  categorical-1448-both_sexes-1.json.br  categorical-1468-both_sexes-2.json.br  categorical-1468-both_sexes-4.json.br  categorical-1538-both_sexes-0.json.br  categorical-1538-both_sexes-1.json.br  categorical-1538-both_sexes-2.json.br  categorical-1677-both_sexes-1677.json.br  categorical-1707-both_sexes-1.json.br  categorical-1707-both_sexes-2.json.br  categorical-1747-both_sexes-4.json.br  categorical-1747-both_sexes-5.json.br  categorical-1920-both_sexes-1920.json.br  categorical-1940-both_sexes-1940.json.br  (+346 more)
data/pan_ukbb/scores/: biomarkers-30600-both_sexes-irnt.json.br  biomarkers-30610-both_sexes-irnt.json.br  biomarkers-30620-both_sexes-irnt.json.br  biomarkers-30630-both_sexes-irnt.json.br  biomarkers-30640-both_sexes-irnt.json.br  biomarkers-30670-both_sexes-irnt.json.br  biomarkers-30680-both_sexes-irnt.json.br  biomarkers-30690-both_sexes-irnt.json.br  biomarkers-30700-both_sexes-irnt.json.br  biomarkers-30710-both_sexes-irnt.json.br  biomarkers-30720-both_sexes-irnt.json.br  biomarkers-30730-both_sexes-irnt.json.br  biomarkers-30750-both_sexes-irnt.json.br  biomarkers-30760-both_sexes-irnt.json.br  biomarkers-30770-both_sexes-irnt.json.br  biomarkers-30780-both_sexes-irnt.json.br  biomarkers-30810-both_sexes-irnt.json.br  biomarkers-30830-both_sexes-irnt.json.br  biomarkers-30860-both_sexes-irnt.json.br  biomarkers-30870-both_sexes-irnt.json.br  biomarkers-30890-both_sexes-irnt.json.br  categorical-120-both_sexes-1.json.br  categorical-120-both_sexes-9.json.br  categorical-1210-both_sexes-1210.json.br  categorical-1418-both_sexes-1.json.br  categorical-1428-both_sexes-0.json.br  categorical-1428-both_sexes-1.json.br  categorical-1448-both_sexes-1.json.br  categorical-1468-both_sexes-2.json.br  categorical-1468-both_sexes-4.json.br  categorical-1538-both_sexes-0.json.br  categorical-1538-both_sexes-1.json.br  categorical-1538-both_sexes-2.json.br  categorical-1677-both_sexes-1677.json.br  categorical-1747-both_sexes-4.json.br  categorical-1747-both_sexes-5.json.br  categorical-1920-both_sexes-1920.json.br  categorical-1940-both_sexes-1940.json.br  categorical-1950-both_sexes-1950.json.br  categorical-1970-both_sexes-1970.json.br  (+306 more)
src/: lib.rs  util.rs
src/app/: main.rs
src/app/render/: home.rs  intro.html  mod.rs  pan_ukbb.rs
src/worker/: main.rs
